--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
+    "@angular/fire": "^5.1.3",
     "@angular/forms": "^7.0.0",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
@@ -39,7 +40,8 @@
     "@ngrx/effects": "^8.0.0-beta.2",
     "@ngrx/store": "^8.0.0-beta.2",
     "core-js": "^2.5.4",
-    "rxjs": "6.3.3",
+    "firebase": "^5.5.0",
+    "rxjs": "^6.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
